[workspace]
members = [
    "problems/class1/a-hello-world",
    "problems/class1/b-fibonacci",
    "problems/class1/c-big-uint",
    "problems/class2/a-binary-tree",
    "problems/class3/a-default-args",
    "problems/class3/b-wc",
    "problems/class4/a-arc",
    "problems/class5/a-actor",
    "problems/class6/a-web-server",
    "solutions/class1/a-hello-world-sol",
    "solutions/class1/b-fibonacci-sol",
    "solutions/class1/c-big-uint-sol",
    "solutions/class2/a-binary-tree-sol",
    "solutions/class3/a-default-args-sol",
    "solutions/class3/b-wc-sol",
    "solutions/class4/a-arc-sol",
    "solutions/class5/a-actor-sol",
    "solutions/class6/a-web-server-sol",
]